--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -100,8 +100,20 @@ chart_apps:
           emails: []
       datasource:
         datasources:
-          lokiTpl:
-            externalEnvs: {{ .Values.externalEnvs | toYaml | nindent 10 }}
+          {{- range $env_name, $env_obj := .Values.externalEnvs }}
+          loki-{{ tpl $env_name $ }}:
+            enabled: true
+            uid: loki-{{ tpl $env_name $ }}
+            selector:
+              grafana: main
+            datasource:
+              type: loki
+              isDefault: false
+              access: proxy
+              jsonData:
+                manageAlerts: 'false'
+              url: https://loki.{{ $env_obj.domain }}
+          {{- end }}
   konghq:
     enabled: false
     values: |
