--- a/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanamutetimings.yaml
+++ b/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanamutetimings.yaml
@@ -3,24 +3,31 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafananotificationpolicyroutes.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.17.3
+  name: grafanamutetimings.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaNotificationPolicyRoute
-    listKind: GrafanaNotificationPolicyRouteList
-    plural: grafananotificationpolicyroutes
-    singular: grafananotificationpolicyroute
+    kind: GrafanaMuteTiming
+    listKind: GrafanaMuteTimingList
+    plural: grafanamutetimings
+    singular: grafanamutetiming
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - format: date-time
+      jsonPath: .status.lastResync
+      name: Last resync
+      type: date
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationPolicyRoute is the Schema for the grafananotificationpolicyroutes
-          API
+        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
         properties:
           apiVersion:
             description: |-
@@ -40,79 +47,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationPolicyRouteSpec defines the desired state
-              of GrafanaNotificationPolicyRoute
+            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
             properties:
-              continue:
-                description: continue
+              allowCrossNamespaceImport:
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
-              group_by:
-                description: group by
-                items:
-                  type: string
-                type: array
-              group_interval:
-                description: group interval
-                type: string
-              group_wait:
-                description: group wait
-                type: string
-              match_re:
-                additionalProperties:
-                  type: string
-                description: match re
-                type: object
-              matchers:
-                description: matchers
-                items:
-                  properties:
-                    isEqual:
-                      description: is equal
-                      type: boolean
-                    isRegex:
-                      description: is regex
-                      type: boolean
-                    name:
-                      description: name
-                      type: string
-                    value:
-                      description: value
-                      type: string
-                  required:
-                  - isRegex
-                  - value
-                  type: object
-                type: array
-              mute_time_intervals:
-                description: mute time intervals
-                items:
-                  type: string
-                type: array
-              object_matchers:
-                description: object matchers
-                items:
-                  description: |-
-                    ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
-
-                    swagger:model ObjectMatcher
-                  items:
-                    type: string
-                  type: array
-                type: array
-              provenance:
-                description: provenance
-                type: string
-              receiver:
-                description: receiver
-                minLength: 1
-                type: string
-              repeat_interval:
-                description: repeat interval
-                type: string
-              routeSelector:
-                description: |-
-                  selects GrafanaNotificationPolicyRoutes to merge in when specified
-                  mutually exclusive with Routes
+              editable:
+                default: true
+                description: Whether to enable or disable editing of the mute timing
+                  in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: spec.editable is immutable
+                  rule: self == oldSelf
+              instanceSelector:
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -157,12 +108,88 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-              routes:
-                description: routes, mutually exclusive with RouteSelector
-                x-kubernetes-preserve-unknown-fields: true
+                x-kubernetes-validations:
+                - message: spec.instanceSelector is immutable
+                  rule: self == oldSelf
+              name:
+                description: A unique name for the mute timing
+                type: string
+              resyncPeriod:
+                default: 10m0s
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
+                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                type: string
+              suspend:
+                description: Suspend pauses synchronizing attempts and tells the operator
+                  to ignore changes
+                type: boolean
+              time_intervals:
+                description: Time intervals for muting
+                items:
+                  properties:
+                    days_of_month:
+                      description: |-
+                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
+                        For example: -1 for the last day of the month.
+                      items:
+                        type: string
+                      type: array
+                    location:
+                      description: Depending on the location, the time range is displayed
+                        in local time.
+                      type: string
+                    months:
+                      description: |-
+                        The months of the year in either numerical or the full calendar month.
+                        For example: 1, may.
+                      items:
+                        type: string
+                      type: array
+                    times:
+                      description: The time inclusive of the start and exclusive of
+                        the end time (in UTC if no location has been selected, otherwise
+                        local time).
+                      items:
+                        properties:
+                          end_time:
+                            description: end time
+                            type: string
+                          start_time:
+                            description: start time
+                            type: string
+                        required:
+                        - end_time
+                        - start_time
+                        type: object
+                      type: array
+                    weekdays:
+                      description: |-
+                        The day or range of days of the week.
+                        For example: monday, thursday
+                      items:
+                        type: string
+                      type: array
+                    years:
+                      description: |-
+                        The year or years for the interval.
+                        For example: 2021
+                      items:
+                        type: string
+                      type: array
+                  type: object
+                minItems: 1
+                type: array
             required:
-            - receiver
+            - instanceSelector
+            - name
+            - time_intervals
             type: object
+            x-kubernetes-validations:
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
             description: The most recent observed state of a Grafana resource
             properties:
