--- a/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanacontactpoints.yaml
+++ b/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanacontactpoints.yaml
@@ -3,23 +3,20 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanadatasources.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.17.3
+  name: grafanacontactpoints.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaDatasource
-    listKind: GrafanaDatasourceList
-    plural: grafanadatasources
-    singular: grafanadatasource
+    kind: GrafanaContactPoint
+    listKind: GrafanaContactPointList
+    plural: grafanacontactpoints
+    singular: grafanacontactpoint
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -30,7 +27,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaDatasource is the Schema for the grafanadatasources API
+        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
+          API
         properties:
           apiVersion:
             description: |-
@@ -50,51 +48,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
+            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              datasource:
-                properties:
-                  access:
-                    type: string
-                  basicAuth:
-                    type: boolean
-                  basicAuthUser:
-                    type: string
-                  database:
-                    type: string
-                  editable:
-                    description: Whether to enable/disable editing of the datasource
-                      in Grafana UI
-                    type: boolean
-                  isDefault:
-                    type: boolean
-                  jsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  name:
-                    type: string
-                  orgId:
-                    description: Deprecated field, it has no effect
-                    format: int64
-                    type: integer
-                  secureJsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  type:
-                    type: string
-                  uid:
-                    description: Deprecated field, use spec.uid instead
-                    type: string
-                  url:
-                    type: string
-                  user:
-                    type: string
-                type: object
+              disableResolveMessage:
+                type: boolean
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -144,30 +106,27 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              plugins:
-                description: plugins
-                items:
-                  properties:
-                    name:
-                      type: string
-                    version:
-                      type: string
-                  required:
-                  - name
-                  - version
-                  type: object
-                type: array
+              name:
+                type: string
               resyncPeriod:
                 default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              settings:
+                x-kubernetes-preserve-unknown-fields: true
+              suspend:
+                description: Suspend pauses synchronizing attempts and tells the operator
+                  to ignore changes
+                type: boolean
+              type:
+                minLength: 1
+                type: string
               uid:
-                description: |-
-                  The UID, for the datasource, fallback to the deprecated spec.datasource.uid
-                  and metadata.uid. Can be any string consisting of alphanumeric characters,
-                  - and _ with a maximum length of 40 +optional
+                description: Manually specify the UID the Contact Point is created
+                  with. Can be any string consisting of alphanumeric characters, -
+                  and _ with a maximum length of 40
                 maxLength: 40
                 pattern: ^[a-zA-Z0-9-_]+$
                 type: string
@@ -175,7 +134,6 @@ spec:
                 - message: spec.uid is immutable
                   rule: self == oldSelf
               valuesFrom:
-                description: environments variables from secrets or config maps
                 items:
                   properties:
                     targetPath:
@@ -241,8 +199,10 @@ spec:
                 maxItems: 99
                 type: array
             required:
-            - datasource
             - instanceSelector
+            - name
+            - settings
+            - type
             type: object
             x-kubernetes-validations:
             - message: spec.uid is immutable
@@ -253,12 +213,8 @@ spec:
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
+            description: The most recent observed state of a Grafana resource
             properties:
-              NoMatchingInstances:
-                description: The datasource instanceSelector can't find matching grafana
-                  instances
-                type: boolean
               conditions:
                 description: Results when synchonizing resource with Grafana instances
                 items:
@@ -316,17 +272,10 @@ spec:
                   - type
                   type: object
                 type: array
-              hash:
-                type: string
-              lastMessage:
-                description: 'Deprecated: Check status.conditions or operator logs'
-                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
                 format: date-time
-                type: string
-              uid:
                 type: string
             type: object
         required:
