--- a/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanadashboards.yaml
+++ b/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafanadashboards.yaml
@@ -3,20 +3,23 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanalibrarypanels.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.17.3
+  name: grafanadashboards.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaLibraryPanel
-    listKind: GrafanaLibraryPanelList
-    plural: grafanalibrarypanels
-    singular: grafanalibrarypanel
+    kind: GrafanaDashboard
+    listKind: GrafanaDashboardList
+    plural: grafanadashboards
+    singular: grafanadashboard
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -27,8 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaLibraryPanel is the Schema for the grafanalibrarypanels
-          API
+        description: GrafanaDashboard is the Schema for the grafanadashboards API
         properties:
           apiVersion:
             description: |-
@@ -48,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaLibraryPanelSpec defines the desired state of GrafanaLibraryPanel
+            description: GrafanaDashboardSpec defines the desired state of GrafanaDashboard
             properties:
               allowCrossNamespaceImport:
                 default: false
@@ -215,6 +217,9 @@ spec:
                   - name
                   type: object
                 type: array
+              folder:
+                description: folder assignment for dashboard
+                type: string
               folderRef:
                 description: Name of a `GrafanaFolder` resource in the same namespace
                 type: string
@@ -326,6 +331,10 @@ spec:
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              suspend:
+                description: Suspend pauses synchronizing attempts and tells the operator
+                  to ignore changes
+                type: boolean
               uid:
                 description: |-
                   Manually specify the uid, overwrites uids already present in the json model.
@@ -402,6 +411,10 @@ spec:
                 time
               rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
                 && !(has(self.folderUID))) || !(has(self.folderRef) && (has(self.folderUID)))
+            - message: folder field cannot be set when folderUID or folderRef is already
+                declared
+              rule: (has(self.folder) && !(has(self.folderRef) || has(self.folderUID)))
+                || !(has(self.folder))
             - message: spec.uid is immutable
               rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
                 has(self.uid)))
@@ -410,8 +423,12 @@ spec:
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaLibraryPanelStatus defines the observed state of GrafanaLibraryPanel
+            description: GrafanaDashboardStatus defines the observed state of GrafanaDashboard
             properties:
+              NoMatchingInstances:
+                description: The dashboard instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
                 description: Results when synchonizing resource with Grafana instances
                 items:
