--- a/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafananotificationpolicies.yaml
+++ b/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafananotificationpolicies.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.3
+    controller-gen.kubebuilder.io/version: v0.17.3
   name: grafananotificationpolicies.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
@@ -241,6 +241,10 @@ spec:
                 required:
                 - receiver
                 type: object
+              suspend:
+                description: Suspend pauses synchronizing attempts and tells the operator
+                  to ignore changes
+                type: boolean
             required:
             - instanceSelector
             - route
