--- a/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafananotificationpolicyroutes.yaml
+++ b/crds/grafana-operator/v5.19.4.grafana.integreatly.org_grafananotificationpolicyroutes.yaml
@@ -3,31 +3,23 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafananotificationtemplates.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.17.3
+  name: grafananotificationpolicyroutes.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaNotificationTemplate
-    listKind: GrafanaNotificationTemplateList
-    plural: grafananotificationtemplates
-    singular: grafananotificationtemplate
+    kind: GrafanaNotificationPolicyRoute
+    listKind: GrafanaNotificationPolicyRouteList
+    plural: grafananotificationpolicyroutes
+    singular: grafananotificationpolicyroute
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - format: date-time
-      jsonPath: .status.lastResync
-      name: Last resync
-      type: date
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1beta1
+  - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationTemplate is the Schema for the GrafanaNotificationTemplate
+        description: GrafanaNotificationPolicyRoute is the Schema for the grafananotificationpolicyroutes
           API
         properties:
           apiVersion:
@@ -48,23 +40,79 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationTemplateSpec defines the desired state
-              of GrafanaNotificationTemplate
+            description: GrafanaNotificationPolicyRouteSpec defines the desired state
+              of GrafanaNotificationPolicyRoute
             properties:
-              allowCrossNamespaceImport:
-                default: false
-                description: Allow the Operator to match this resource with Grafanas
-                  outside the current namespace
+              continue:
+                description: continue
                 type: boolean
-              editable:
-                description: Whether to enable or disable editing of the notification
-                  template in Grafana UI
-                type: boolean
-                x-kubernetes-validations:
-                - message: spec.editable is immutable
-                  rule: self == oldSelf
-              instanceSelector:
-                description: Selects Grafana instances for import
+              group_by:
+                description: group by
+                items:
+                  type: string
+                type: array
+              group_interval:
+                description: group interval
+                type: string
+              group_wait:
+                description: group wait
+                type: string
+              match_re:
+                additionalProperties:
+                  type: string
+                description: match re
+                type: object
+              matchers:
+                description: matchers
+                items:
+                  properties:
+                    isEqual:
+                      description: is equal
+                      type: boolean
+                    isRegex:
+                      description: is regex
+                      type: boolean
+                    name:
+                      description: name
+                      type: string
+                    value:
+                      description: value
+                      type: string
+                  required:
+                  - isRegex
+                  - value
+                  type: object
+                type: array
+              mute_time_intervals:
+                description: mute time intervals
+                items:
+                  type: string
+                type: array
+              object_matchers:
+                description: object matchers
+                items:
+                  description: |-
+                    ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
+
+                    swagger:model ObjectMatcher
+                  items:
+                    type: string
+                  type: array
+                type: array
+              provenance:
+                description: provenance
+                type: string
+              receiver:
+                description: receiver
+                minLength: 1
+                type: string
+              repeat_interval:
+                description: repeat interval
+                type: string
+              routeSelector:
+                description: |-
+                  selects GrafanaNotificationPolicyRoutes to merge in when specified
+                  mutually exclusive with Routes
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -109,33 +157,12 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-                x-kubernetes-validations:
-                - message: spec.instanceSelector is immutable
-                  rule: self == oldSelf
-              name:
-                description: Template name
-                type: string
-              resyncPeriod:
-                default: 10m0s
-                description: How often the resource is synced, defaults to 10m0s if
-                  not set
-                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
-                type: string
-              template:
-                description: Template content
-                type: string
+              routes:
+                description: routes, mutually exclusive with RouteSelector
+                x-kubernetes-preserve-unknown-fields: true
             required:
-            - instanceSelector
-            - name
+            - receiver
             type: object
-            x-kubernetes-validations:
-            - message: spec.editable is immutable
-              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
-                && has(self.editable)))
-            - message: disabling spec.allowCrossNamespaceImport requires a recreate
-                to ensure desired state
-              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
-                && self.allowCrossNamespaceImport)'
           status:
             description: The most recent observed state of a Grafana resource
             properties:
