Feature loki gf ds (#69)
* add tpl to name and uid

* test fix

* test fix

* test fix

* disable test

* test toyaml

* test

* test

* test with

* test

* test

* change name and uid to tpl

* update grafana

* changelog

* change [] to {}, create loki-int ds

* fix ds name

* helm dep update

* fix ,

* changelog

* add new global variable

* new if block for test

* fix {{}}

* fix {{}}

* fix }

* fix winget

* add tpl for loki-tpl

* fix {{}}

* test fix {{}}

* Revert "test fix {{}}"

This reverts commit f94b4a1b76c7faf9d1ea6133ff7116a5b8b4fefe.

* test quote fix

* fix if eq

* add range externalEnvs

* add loki-tpl

* test externalEnvs

* test env

* delete test value

* fix variable path

* change path externalEnvs var

* enable all needed variables

* fix var externalEnvs

* toYaml externalEnvs

* fix nindent

* fix envDomain variable

* change name, uid, url for loki-tpl

* split datasources and loki-tpl

* fix '-'

* Revert "fix '-'"

This reverts commit 31da55677666feabaec98ee763e8f5af149b794b.

* fix '-'

* change loki-tpl to lokiTpl

* helm dep update

* try fix range only1 env

* fix duplicate range

* try fix error

* disable tpl

* test fix name

* fix domain

* create one approach for ds

* fix rendering more then 1 name

* changelog update

* update operator

* helm dep update

* update grafana

* update info

* delete externalEnvDomains

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -1,6 +1,6 @@
 labels: {}
 
-externalEnvDomains: []
+externalEnvs: {}
 
 repository:
   url: #git@github.com:ggramal/infrared.git
@@ -97,6 +97,22 @@ chart_apps:
         access:
           teams: ["admin", "dev", "pm", "qa"]
           emails: []
+      datasource:
+        datasources:
+          {{- range $env_name, $env_obj := .Values.externalEnvs }}
+          loki-{{ tpl $env_name $ }}:
+            enabled: true
+            uid: loki-{{ tpl $env_name $ }}
+            selector:
+              grafana: main
+            datasource:
+              type: loki
+              isDefault: false
+              access: proxy
+              jsonData:
+                manageAlerts: 'false'
+              url: https://loki.{{ $env_obj.domain }}
+          {{- end }}
   konghq:
     enabled: false
     values: |
