--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -1,29 +1,29 @@
-{{- range $ds_obj := .Values.datasources }}
-{{- $enbld := ternary $ds_obj.enabled true ( hasKey $ds_obj "enabled") }}
-{{- if $enbld }}
+{{- range $dsName, $ds_obj := .Values.datasources }}
+{{- if $ds_obj.enabled }}
+
 ---
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
   labels:
-{{- include "grafana-datasources.labels" $ | nindent 4 }}
-  name: {{ $ds_obj.name }}
+    {{- include "grafana-datasources.labels" $ | nindent 4 }}
+  name: {{ tpl $dsName $ }}
 spec:
-  {{- if $ds_obj.selector }}
+  {{- with $ds_obj.selector }}
   instanceSelector:
     matchLabels:
-    {{- toYaml $ds_obj.selector | nindent 6 }}
+      {{- toYaml . | nindent 6 }}
   {{- end }}
   resyncPeriod: {{ $ds_obj.resyncPeriod | default "30s" }}
   {{- if $ds_obj.allowCrossNamespaceImport }}
   allowCrossNamespaceImport: {{ $ds_obj.allowCrossNamespaceImport }}
   {{- end }}
-  {{- if $ds_obj.uid }}
-  uid: {{ $ds_obj.uid }}
+  {{- with $ds_obj.uid }}
+  uid: {{ tpl . $ }}
   {{- end }}
   {{- with $ds_obj.datasource }}
   datasource:
-    name: {{ $ds_obj.name }}
+    name: {{ tpl $dsName $ }}
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
   {{- with $ds_obj.plugins }}
@@ -34,5 +34,6 @@ spec:
   valuesFrom:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+
 {{- end }}
 {{- end }}
