--- a/charts/chart_deps/grafana/dashboards/templates/dashboards.yaml
+++ b/charts/chart_deps/grafana/dashboards/templates/dashboards.yaml
@@ -1,5 +1,5 @@
-{{- range $dbName, $db_obj := .Values.dashboards }}
-{{- if $db_obj.enabled }}
+{{- range $dboard_name, $dboard_obj := .Values.dashboards }}
+{{- if $dboard_obj.enabled }}
 
 ---
 apiVersion: grafana.integreatly.org/v1beta1
@@ -7,60 +7,60 @@ kind: GrafanaDashboard
 metadata:
   labels:
 {{- include "grafana-dashboards.labels" $ | nindent 4 }}
-  name: {{ tpl $dbName $ }}
+  name: {{ tpl $dboard_name $ }}
 spec:
-  {{- with $db_obj.selector }}
+  {{- with $dboard_obj.selector }}
   instanceSelector:
     matchLabels:
     {{- toYaml . | nindent 6 }}
   {{- end }}
-  resyncPeriod: {{ $db_obj.resyncPeriod | default "30s" }}
-  {{- if $db_obj.allowCrossNamespaceImport }}
-  allowCrossNamespaceImport: {{ $db_obj.allowCrossNamespaceImport }}
+  resyncPeriod: {{ $dboard_obj.resyncPeriod | default "30s" }}
+  {{- if $dboard_obj.allowCrossNamespaceImport }}
+  allowCrossNamespaceImport: {{ $dboard_obj.allowCrossNamespaceImport }}
   {{- end }}
-  {{- if $db_obj.jsonnet }}
-  jsonnet: {{ toYaml $db_obj.jsonnet | nindent 4 }}
+  {{- if $dboard_obj.jsonnet }}
+  jsonnet: {{ toYaml $dboard_obj.jsonnet | nindent 4 }}
   {{- end }}
-  {{- if $db_obj.gzipJson }}
-  gzipJson: {{ toYaml $db_obj.gzipJson | nindent 4 }}
+  {{- if $dboard_obj.gzipJson }}
+  gzipJson: {{ toYaml $dboard_obj.gzipJson | nindent 4 }}
   {{- end }}
-  {{- if $db_obj.json }}
-  json: {{ toYaml $db_obj.json | nindent 4 }}
+  {{- if $dboard_obj.json }}
+  json: {{ toYaml $dboard_obj.json | nindent 4 }}
   {{- end }}
-  {{- if $db_obj.folder }}
-  folder: {{ $db_obj.folder }}
+  {{- if $dboard_obj.folder }}
+  folder: {{ $dboard_obj.folder }}
   {{- end }}
-  {{- if $db_obj.url }}
-  url: {{ $db_obj.url }}
+  {{- if $dboard_obj.url }}
+  url: {{ $dboard_obj.url }}
   {{- end }}
-  {{- if $db_obj.contentCacheDuration }}
-  contentCacheDuration: {{ $db_obj.contentCacheDuration }}
+  {{- if $dboard_obj.contentCacheDuration }}
+  contentCacheDuration: {{ $dboard_obj.contentCacheDuration }}
   {{- end }}
-  {{- with $db_obj.datasource }}
+  {{- with $dboard_obj.datasource }}
   datasource:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.plugins }}
+  {{- with $dboard_obj.plugins }}
   plugins:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.configMapRef }}
+  {{- with $dboard_obj.configMapRef }}
   configMapRef:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.envFrom }}
+  {{- with $dboard_obj.envFrom }}
   envFrom:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.envs }}
+  {{- with $dboard_obj.envs }}
   envs:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.grafanaCom }}
+  {{- with $dboard_obj.grafanaCom }}
   grafanaCom:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with $db_obj.jsonnetLib }}
+  {{- with $dboard_obj.jsonnetLib }}
   jsonnetLib:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
